@@ -1,3 +1,14 @@
+2000-08-27  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>
+
+	* pa64solib.c (pa64_solib_load_symbols): Don't use ANOFFSET as an
+ 	lvalue.
+	* xcoffread.c (xcoff_symfile_offsets): Ditto
+	* somsolib.c (som_solib_section_offsets): Ditto.
+	* somread.c (som_symfile_offsets): Ditto.
+	* rs6000-nat.c (vmap_symtab): Ditto.
+	* remote-vx.c (vx_add_symbols): Ditto.
+	* remote-os9k.c (rombug_wait): Ditto.
+
 2000-08-27  Mark Kettenis  <kettenis@gnu.org>
 
 	* gregset.h: Protect against multiple inclusion.  Remove some
